--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "__MSG_appName__",
-  "version": "0.0.4",
+  "version": "0.0.12",
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
@@ -24,7 +24,7 @@
       "js": [
         "scripts/app.js"
       ],
-      "run_at": "document_end"
+      "run_at": "document_start"
     }
   ],
   "permissions": [
@@ -39,7 +39,6 @@
       "19": "images/icon.png",
       "38": "images/icon.png"
     },
-    "default_title": "hubdoc jquery injector"/*,
-    "default_popup": "popup.html"*/
+    "default_title": "hubdoc jquery injector"
   }
 }
