--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "__MSG_appName__",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
@@ -19,7 +19,8 @@
       "matches": [
         "http://*/*",
         "https://*/*",
-        "file://*/*"
+        "file://*/*",
+        "*://*/*"
       ],
       "js": [
         "scripts/app.js"
